# template-action

./: .bumpversion.toml  .pre-commit-config.yaml  README.md  action.yaml  pyproject.toml  pyrightconfig.json  pytest.toml  script.py
.github/workflows/: pull-request.yaml  push.yaml
src/template_action/: cli.py  lib.py  logging.py  settings.py
src/tests/: test_cli.py
