[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]", "rich"]

[project]
  dependencies = [
    "click >=8.3.1, <8.4",
    "dycw-utilities >=0.170.0, < 0.171",
    "rich>=14.2.0, <14.3",
    "typed-settings[attrs, click] >=25.3.0, <25.4",
  ]
  description = "Template for Python actions"
  name = "dycw-template-action"
  readme = "README.md"
  requires-python = ">= 3.13"
  version = "0.1.0"

  [project.scripts]
    template-action = "template_action.cli:_main"

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "template_action"
      module-root = "src"
